tests/unit-fail-compilation/j023e.c.ref
j023e.c: In function ‘main’:
j023e.c:4:7: error: invalid use of void expression
       (int) f();
       ^
compilation terminated due to -Wfatal-errors.
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors j023e.c to see commands run.
